provenance/accepted/v47/SUMMARY.md
# Repository check results

Run: `erdos647_repo_v47_results_20260908T205250Z_0078dcb7`
Status: **PASS_SELECTED_CHECKS**

| Gate | This invocation |
|---|---|
| core | PASS |
| reciprocal_kernel | PASS |
| reciprocal_abel | PASS |
| pntplus_inputs | PASS |
| analytic_inputs | PASS |
| clean_mertens | PASS |
| selected_prime_reciprocals | PASS |
| endpoint_log_bounds | PASS |
| factorial_bounds | PASS |
| factorial_estimate | PASS |
| log_budget_factorial | PASS |
| prime_reciprocal_lower | PASS |
| small_prime_debit_estimate | PASS |
| corrected_budget_estimate | PASS |
| endpoint_statement | PASS |
| endpoint_window_parameters | PASS |
| endpoint_truncation_parameters | PASS |
| endpoint_cutoff_parameters | PASS |
| endpoint_prime_mass_parameters | PASS |
| endpoint_prime_mass_gap | PASS |
| endpoint_mass_budget_bounds | PASS |
| endpoint_amplification | PASS |
| endpoint_moment_tail | PASS |
| endpoint_error_scales | PASS |
| endpoint_arithmetic_remainder | PASS |
| endpoint_counting_reduction | PASS |
| endpoint_absorption_scales | PASS |
| endpoint_error_absorption | PASS |
| endpoint_final | PASS |

Historical proof acceptance is not a current run result.
A selected failure or blocked gate makes the overall command fail.
The fixed-coefficient endpoint passed in this invocation with c=1/1000; this is not a resolution of Erdos #647.
